--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,30 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* MAIN */
+main{
+    margin: 0 auto;
+    text-align: center;
+}
+
+main h1 {
+    padding: 30px 0;
+}
+
+main div {
+    font-size: 2em;
+}
+
+main div div {
+    display: inline;
+    padding: 10px;
+}
+
+main div div:first-of-type{
+    padding-left: 0;
+}
+
+main div div:last-of-type{
+    padding-right: 0;
+}
